LU-8999 quota: fix quota iteration interface

Since zfs 0.7.0, object accounting is maintained by DMU, so that quota
iteration interface should retrieve the information over there.

Lustre-change: https://review.whamcloud.com/#/c/28345/
Lustre-commit: 8fb8e938c8af8630b06a527874ef47d52fb8b102

Signed-off-by: Jinshan Xiong <jinshan.xiong@intel.com>
Change-Id: I3d0744dfb52b1a9088b828bc72d648872ec4d00b
Signed-off-by: Minh Diep <minh.diep@intel.com>
Reviewed-on: https://review.whamcloud.com/28530
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Fan Yong <fan.yong@intel.com>
Reviewed-by: Niu Yawei <yawei.niu@intel.com>
Reviewed-by: John L. Hammond <john.hammond@intel.com>